# snapy

./: .coverage  .env  .env.example  .env.leave  .gitignore  API.md  CLAUDE.md  DILL_INTEGRATION_SUMMARY.md  FEATURES.md  MIGRATION_COMPLETE.md  Makefile  PROJECT_RESTRUCTURE_PLAN.md  README.md  TESTING_RESULTS.md  architecture.puml  debug_test.py  environment.yml  final_validation.py  forClaude.md  pyproject.toml  setup.md  test_dill_integration.py  test_functionality.py  test_listnode_fix.py
.clutter/: INTEGRATION_GUIDE.md  old_enhanced_example.py  pysnap_2025-09-21-i-have-a-basic-example-in-src.txt  test_pysnap_examples.py
.clutter/tests/: test_tracer.py
.conda/: environment.yml  environment_readable.yml
000showcase/: README.md  data_structures.py  dill_plan.md  simple_test.py  simple_test_fixed.py  test_dill_simulation.py  test_showcase.py
000showcase/captures/: process_person_20251006_142634_627.pkl
RealOpsOne.concatenation/: 1760187760925.pkl  1760187760959.pkl
RealOpsOne.plus/: 1760187760878.pkl  1760187760908.pkl
__main__/RealOpsOne.concatenation/: 1760187850362.pkl  1760187850404.pkl
__main__/RealOpsOne.plus/: 1760187850293.pkl  1760187850337.pkl
captures/RealOpsOne.concatenation/: 1760187747740.pkl  1760187747778.pkl
captures/RealOpsOne.plus/: 1760187747682.pkl  1760187747719.pkl
context_docs/modules/: snapy_capture_summary.md
context_docs/quick-start/: project-overview.md
context_docs/workflows/: common-tasks.md
docs/: ClaudeGuide.md
docs/context_docs/: README.md
docs/my_docs/: myGuide.md
examples/: BasicOps_interface.py  basics.py  basics_module.py
examples/advanced/: basic_usage.py  enhanced_snap_test.py  filtering_large_args.py  integration_with_snapy_testing.py  production_example.py  test_with_captures.py
examples/basic/: enhanced_example.py
llm_docs/: README.md
llm_docs/api-reference/: snapy_capture_api.md
llm_docs/examples/: integration-patterns.md
llm_docs/modules/: snapy_capture.md  snapy_testing.md
plan/: ArgumentCaptureDesign.md  my_features.md
quiz/architecture/: basic-concepts.json
special_captures/: calculate_metrics_20251006_120048_556.pkl
src/: 2025-09-21-i-have-a-basic-example-in-src.txt  basicExample.py  basicSnap.py  enhanced_example.py  enhanced_snap_test.py  test_syrupy.py
src/__snapshots__/: basicSnap.ambr  enhanced_snap_test.ambr  test_syrupy.ambr
src/capture/: capture.py
src/pysnap/: __init__.py  context.py  decorators.py  snapshot.py
src/snap_capture/: test_func_20250922_211943_009.pkl  (+2 more)
tests/: test_integration.py
(+108 files in other folders)
