[tool.poetry]
name = "snapy"
version = "0.1.0"
description = ""
authors = ["Matevž Vidovič <matevz.vidovic@gmail.si>"]
readme = "README.md"
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["src", "."]

[tool.poetry.dependencies]
python = "^3.11"
syrupy = "^5.0.0"
pytest-mock = "^3.15.1"
dill = "^0.4.0"
python-dotenv = "^1.1.1"
dotenv = "^0.9.9"
pytest-cov = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
