[tool.poetry]
name = "snapy"
version = "0.1.0"
description = ""
authors = ["Matevž Vidovič <matevz.vidovic@gmail.si>"]
readme = "README.md"
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["src", "."]

[tool.poetry.dependencies]
python = "^3.11"
syrupy = "^5.0.0"
pytest-mock = "^3.15.1"
dill = "^0.4.0"
python-dotenv = "^1.1.1"
dotenv = "^0.9.9"
pytest-cov = "^7.0.0"
pytest-dotenv = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.0,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)"
]




[tool.ruff]
# Linting rules and formatting
line-length = 100
target-version = "py312"
fix = true
extend-select = ["I", "UP", "B", "C90"]  # import sorting, pyupgrade, bugbear, complexity
exclude = ["build", "dist", ".venv"]

[tool.mypy]
python_version = "3.12"
strict = true
# Flip these later to become stricter:
ignore_missing_imports = true       # don’t error on untyped libs
disallow_untyped_defs = false       # allow untyped function defs
disallow_incomplete_defs = false    # allow partially typed defs
warn_return_any = false             # don’t complain about returning Any
warn_unused_ignores = false         # don’t warn about unused # type: ignore
check_untyped_defs = false          # Skips type checking for untyped functions
no_implicit_optional = false        # Allows implicit `Optional[...]` for args with default `None`
warn_unreachable = false           # Disables unreachable code warnings
